# search

./: Cargo.toml  LICENSE  README.md
src/: chat.rs  loader.rs  main.rs  search.rs  web_scrapper.rs
