[package]
name = "simpleSearch"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/div02-afk/search"
description = "A lightweight search app that combines web search results with AI-generated summaries"
keywords = ["search", "web search", "chatbot"]
[dependencies]
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
reqwest = {version = "0.12.9", features = ["json"]}
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
console = "0.15.8"
